Fix menu alignment

--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -67,6 +67,10 @@ footer .btn {
   padding: 0;
 }
 
+.nav-link {
+  cursor: pointer;
+}
+
 .navbar-brand .brand-image {
   margin-right: 10px;
 }
